# file-processor

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
cli_app/: pipeline.py
constants/: choices.py  sizes.py
utils/: create_dated_directory.py  directory_utils.py  file_filters.py  inputs.py
